# NODE

./: .gitignore  NODE.txt  README.md  test_acla.py  train_acla.py
Sources/: GPT-5-Pro-Recommendation.md  Neural ODE Research_ 2025 Advancements.md  Neural ODE-Based Models for Battery State-of-Health and RUL Prediction (2023–2025).md  Neural ODEs for Battery Modeling.md  Synthesizing Battery Degradation ODE Reports.md  transcribe.py
mlbench/: README.md  SOURCES.md  pyproject.toml  requirements.txt  setup.py
mlbench/.github/workflows/: ci.yml
mlbench/configs/eval/: acla.yaml
mlbench/configs/model/: lstm_cc.yaml  node_cc.yaml
mlbench/configs/sweep/: baselines.yaml  hpo_spaces.yaml
mlbench/configs/train/: acla.yaml  default.yaml
mlbench/docs/: architecture.md
mlbench/scripts/: train_acla.py
mlbench/src/mlbench/: __init__.py
mlbench/src/mlbench/configs/: default.yaml  defaults.yaml
mlbench/src/mlbench/configs/model/: acla.yaml  anode_cc.yaml  lstm.yaml  pcrnn_cc.yaml  ude_charm_cc.yaml
mlbench/src/mlbench/configs/train/: acla.yaml
mlbench/src/mlbench/eval/: metrics.py  run.py
mlbench/src/mlbench/hpo/: ax_backend.py  optuna_backend.py  search_spaces.py
mlbench/src/mlbench/models/: __init__.py  base.py  registry.py
mlbench/src/mlbench/models/acla/: model.py
mlbench/src/mlbench/models/anode/: model.py
mlbench/src/mlbench/models/lstm/: model.py
mlbench/src/mlbench/models/node/: model.py
mlbench/src/mlbench/models/pcrnn/: model.py
mlbench/src/mlbench/models/shared/: mlp.py
mlbench/src/mlbench/models/ude_charm/: model.py
mlbench/src/mlbench/ode/: solvers.py
mlbench/src/mlbench/train/: losses.py  metrics.py  run.py  serialization.py  trainer.py
mlbench/src/mlbench/utils/: config.py  config_loader.py  env.py  logging.py  mlflow_utils.py  registry.py  seed.py  version.py
mlbench/src/mlbench/visualization/: __init__.py  plots.py
mlbench/tests/: test_acla_model.py  test_cli.py  test_config.py  test_data_nasa.py  test_datasets.py  test_models_forward.py  test_trainer_smoke.py
