[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlbench"
version = "0.1.0"
description = "Machine Learning Benchmark for Battery State-of-Health Modeling"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MLBench Team"}
]
keywords = ["machine-learning", "battery", "state-of-health", "neural-odes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.1.0",
    "torchdiffeq>=0.2.3",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    "mlflow>=2.14.0",
    "optuna>=3.6.0",
    "ax-platform>=0.3.6",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[project.scripts]
soh-train = "mlbench.experiments.run:main"
soh-eval = "mlbench.experiments.eval:main"
soh-sweep = "mlbench.experiments.sweep:main"
soh-hpo = "mlbench.experiments.hpo:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["mlbench"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "torchdiffeq.*",
    "mlflow.*",
    "optuna.*",
    "ax.*",
    "botorch.*",
    "hydra.*",
    "omegaconf.*",
    "wandb.*",
]
ignore_missing_imports = true
